# autodev-system

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
config/: settings.yaml
core/: __init__.py  agent_scheduler.py  config.py  e2e_tester.py  exceptions.py  harness.py  init_generator.py  llm_client.py  models.py  progress_manager.py  recovery.py  session_manager.py  tool_executor.py
core/agents/: __init__.py  base.py  coder.py  initializer.py
core/tools/: __init__.py  browser_automation.py  git_ops.py  test_runner.py
tests/: __init__.py  test_config.py  test_harness.py  test_llm_client.py  test_models.py  test_phase3.py  test_phase4.py  test_phase5.py
